<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drink Tracker</string>
    <string name="action_settings">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc1">Beer</string>
    <string name="desc2">Wine</string>
    <string name="desc3">Shot</string>
    <string name="desc4">Mystery Juice</string>
    <string name="add_event">Add Event</string>
    <string name="name">Name: </string>
    <string name="nameQ">What\'s your name?</string>
    <string name="height">HEIGHT: </string>
    <string name="feet"> feet, </string>
    <string name="inches"> inches</string>
    <string name="weight">WEIGHT: </string>
    <string name="weightQ">weight in pounds</string>
    <string name="ok">OK!</string>
    <string name="title_activity_display_message">YEAAA BITCHEZ!</string>
    <string name="title_metrics">Metrics</string>
    <string name="bac">BAC: </string>
    <string name="desbac">Desired BAC: </string>
    <string name="decimal">Enter a decimal number.</string>
    <string name="timeSince">Time Since First Drink</string>
    <string name="beerCount">Beer Count: </string>
    <string name="wineCount">Wine Count: </string>
    <string name="punchCount">Punch Count: </string>
    <string name="shotCount">Shot Count: </string>
    <string name="title_activity_metrics">Metrics</string>
    <string name="phone">Friend\'s Phone Number: </string>
    <string name="text_friend"> Text a Friend </string>
    <string name="show_metrics"> Show Metrics </string>

</resources>
